# dilay

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/src/: color-button.cpp  color-button.hpp  configuration.cpp  double-slider.cpp  double-slider.hpp  gl-widget.cpp  gl-widget.hpp  helper.hpp  main-widget.cpp  main-widget.hpp  main-window.cpp  main-window.hpp  main.cpp  menu-bar.cpp  opengl-impl.cpp  opengl-impl.hpp  opengl.cpp  opengl.hpp  properties-widget.cpp  properties-widget.hpp  properties.cpp  properties.hpp  qopenglextensions.cpp  tool-tip.cpp  tool-tip.hpp  tooltip-widget.cpp  tooltip-widget.hpp  two-column-grid.cpp  two-column-grid.hpp  vector-edit.cpp  vector-edit.hpp  view-util.cpp
ext/: CMakeLists.txt
ext/json/: CMakeLists.txt  Readme.md
ext/json/src/: json.hpp
lib/: CMakeLists.txt
lib/dilay/: camera.hpp  color.hpp  config.cpp  config.hpp  configurable.hpp  controller.h  globals.hpp  history.hpp  json-conversion.cpp  json-kvstore.cpp  json-kvstore.hpp  kvstore.hpp  macro.hpp  opengl-Api.hpp  opengl-buffer-id.cpp  opengl.cpp  opengl.hpp  renderer.hpp  scene.hpp  shader.cpp  shader.hpp  state.cpp  state.hpp  time-delta.cpp  tool.cpp  tool.hpp  util.cpp  util.hpp
lib/dilay/primitive/: cone-sphere.hpp
lib/dilay/tool/: convert-sketch.cpp  delete-mesh.cpp  delete-sketch.cpp  modify-sketch.cpp  move-camera.cpp  move-camera.hpp  move-mesh.cpp  new-mesh.cpp  new-sketch.cpp  rebalance-sketch.cpp  sculpt.cpp  sculpt.hpp  sketch-spheres.cpp
lib/dilay/tool/sculpt/: crease.cpp  grab.cpp
lib/dilay/tool/util/: movement.cpp  movement.hpp  scaling.hpp
lib/dilay/view/: axis.cpp  axis.hpp  cursor.cpp  cursor.hpp  floor-plane.cpp  floor-plane.hpp  light.hpp  pointing-event.cpp  pointing-event.hpp
lib/dilay/winged/: face-intersection.cpp  face-intersection.hpp  mesh.cpp  mesh.hpp  util.cpp
lib/src/: cache.hpp  camera.cpp  color.cpp  color.hpp  config.cpp  config.hpp  controller.h  history.cpp  index-octree.hpp  json-conversion.hpp  mesh.cpp  mirror.cpp  opengl-interface.hpp  opengl.cpp  property.hpp  qopenglextensions.h  renderer.cpp  state.cpp  state.hpp  tool-properties.hpp  tool.cpp  tool.hpp  tools.hpp  util.cpp  variant.hpp
lib/src/tool/: convert-sketch.cpp  delete-sketch.cpp  modify-sketch.cpp  move-camera.cpp  move-camera.hpp  move-mesh.cpp  new-mesh.cpp  new-sketch.cpp  sculpt.cpp  sculpt.hpp  sketch-spheres.cpp
lib/src/tool/sculpt/: carve.cpp  crease.cpp  drag.cpp  flatten.cpp  grab.cpp  pinch.cpp  reduce.cpp  smooth.cpp
lib/src/tool/util/: movement.cpp  movement.hpp
lib/src/view/: axis.cpp  axis.hpp  color-button.cpp  cursor.cpp  gl-renderer.cpp  gl-renderer.hpp  gl-widget.cpp  helper.cpp  helper.hpp  pointing-event.hpp  properties.cpp  util.cpp  util.hpp
qmlapp/: CMakeLists.txt  ToggleButton.qml  main.cpp  main.qml  qml.qrc  sculptview.cpp  sculptview.h
